# QurgePlugin-Demo

./: .gitignore  CMakeLists.txt  TestAPI.http  build.sh  readme.md
.run/: 调试.run.xml
src/: MyPlugin.h  MyPlugin.mm
src/Utils/: PublicAPI.h
